doc: add some references; continue with intro

--- a/doc/MRScpOptSize.bib
+++ b/doc/MRScpOptSize.bib
@@ -1,3 +1,61 @@
+@InProceedings{bolingbroke2011improving,
+author = {Bolingbroke, Max and Peyton Jones, Simon},
+title = {Improving supercompilation: tag-bags, rollback, speculation, normalisation, and generalisation},
+booktitle = {ICFP},
+year = {2011},
+month = {January},
+abstract = {Supercompilation is a technique due to Turchin Supercompilation is a powerful technique for program optimisation and theorem proving. In this paper we describe and evaluate three improvements to the Cambridge Haskell Supercompiler (CHSC). We reduce supercompiled program size by the use of a weak normaliser and aggressive rollback, and we improve the performance of supercompiled programs by heap speculation and generalisation. Our generalisation method is simpler than those in the literature, and is better at generalising computations involving primitive operations such as those on machine integers. We also provide the first comprehensive account of the tag-bag termination mechanism.},
+url = {https://www.microsoft.com/en-us/research/publication/improving-supercompilation-tag-bags-rollback-speculation-normalisation-and-generalisation/},
+edition = {ICFP},
+}
+
+@InProceedings{Romanenko2014StagedMRSC,
+author={Grechanik, Sergei and Klyuchnikov, Ilya and Romanenko, Sergei},
+title={Staged Multi-Result Supercompilation: Filtering by Transformation},
+booktitle={Proceedings of the Fourth International Valentin Turchin Workshop on Metacomputation},
+editor={Klimov, Andrei and Romanenko, Sergei},
+year={2014},
+pages={54--78},
+publisher={University of Pereslavl Publishing House},
+address={Pereslavl-Zalessky, Russia},
+isbn={978-5-901795-31-6},
+url={http://meta2014.pereslavl.ru/papers/2014_Grechanik_Klyuchnikov_Romanenko__Staged_Multi-Result_Supercompilation__Filtering_by_Transformation.pdf},
+}
+
+@inproceedings{Jonsson2011Taming,
+author = {Jonsson, Peter A. and Nordlander, Johan},
+title = {Taming Code Explosion in Supercompilation},
+year = {2011},
+isbn = {9781450304856},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1929501.1929507},
+doi = {10.1145/1929501.1929507},
+booktitle = {Proceedings of the 20th ACM SIGPLAN Workshop on Partial Evaluation and Program Manipulation},
+pages = {33–42},
+numpages = {10},
+keywords = {haskell, supercompilation, deforestation},
+location = {Austin, Texas, USA},
+series = {PEPM ’11}
+}
+
+@InProceedings{KlyuchnikovMRSCBranch,
+author="Klyuchnikov, Ilya
+and Romanenko, Sergei A.",
+editor="Clarke, Edmund
+and Virbitskaite, Irina
+and Voronkov, Andrei",
+title="Multi-result Supercompilation as Branching Growth of the Penultimate Level in Metasystem Transitions",
+booktitle="Perspectives of Systems Informatics",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="210--226",
+abstract="The paper deals with some aspects of metasystem transitions in the context of supercompilation. We consider the manifestations of the law of branching growth of the penultimate level in the case of higher-level supercompilation and argue that this law provides some useful hints regarding the ways of constructing metasystems by combining supercompilers. In particular we show the usefulness of multi-result supercompilation for proving the equivalence of expressions and in two-level supercompilation.",
+isbn="978-3-642-29709-0"
+doi={10.1007/978-3-642-29709-0_19}
+}
+
 @article{TurchinSupercompilerConcept,
 author = {Turchin, Valentin F.},
 title = {The Concept of a Supercompiler},
